# project-euler

./: .gitignore  P002.hs  P009.hs  P039.hs  P040.hs  Tools.hs  p007  p010  p011  p012  p014  p014_2  p017  p019  p021  p022  p023  p024  p025  p026  p027  p027_2  p028  p030  p033  p034  p035  p036  p037  p038
Haskell/: P002.hs  P041.hs  P042.hs  P043.hs  P044.hs  P045.hs  P046.hs
Haskell/P105/: EqualSplit.hs  MinMajority.hs
P105/: MinMajority2.hs  P105.hs
python/: p001  p003  p004  p005  p006  p008  p013  p015  p016  p018  p020  p029  p030  p031  p032  p032_2  p036  p037  tools.py
rust/: Cargo.toml
rust/src/: lib.rs  p047.rs  p048.rs  p049.rs  p050.rs  p052.rs  p053.rs  p055.rs
